         debugger (patch #319) (Sergio).
20131209 man/fuse.1: document more movie options (Sergio).
20131215 keyboard.c,machines/specplus3.[ch],
         peripherals/disk/{beta.[ch],disciple.[ch],opus.[ch],plusd.[ch]}:
         remove clang tautological-constant-out-of-range-compare warnings by
         moving sentinels into enums and not assigning non-enum values to enum
         variables (Fred).
20131215 compat/{amiga,linux,morphos,unix,wii,win32}: add Makefile.in and
         Makefile to the ignore property (Fred).
20140113 man/fuse.1,menu.[ch],menu_data.dat,rzx.[ch],ui.c: allow to continue
         recordings if there is a final snapshot in the RZX file and allow to
         finalise recordings (part of bug #305) (Sergio).
20140123 rzx.c: reset the autosave frame count on rollback to fix the prune
         function. Fix some warnings about unused parameters (Sergio).
20140123 peripherals/disk/disk.c: fix loading of EDSK files with Sector Offset
         block (fixes bug #307) (Sergio).
20140210 data/fuse.desktop.in: Remove GNOME category as Fuse is not based on
         GNOME libraries (Sergio).
20140217 ui/widget/{filesel.c,roms.c},ui/win32/win32ui.c: fix possible leaks and
         null pointer dereferences (thanks, cppcheck) (Sergio).
20140303 memory.c: Timex EXROM and Dock text was truncated in the debugger UI
         (thanks, Andrew Owen) (Fred).
20140322 memory.c,ui/widget/debugger.c: allow room in the widget UI debugger for
         longer memory straings, restore Timex EXROM and Dock text as it isn't
         truncated in any UIs now (thanks, Sergio) (Fred).
20140322 sound/blipbuffer.h: remove second inline declaration of
         blip_buffer_set_clock_rate() (Fred).
20140510 tape.c: fix speech in Cobra's Arc - Medium Case.tzx when loaded with
         tape traps enabled (thanks, zx81 and Sergio) (Fred).
20140706 hacking/peripheral_tests.txt: use unzipped tapes for peripheral tests
         (thanks, Phil Reynolds) (Sergio).